<resources>
    <string name="app_name">Countdown</string>
    <string name="btn_singlePlayer_choice">Single Player</string>
    <string name="btn_multiplayer_choice">Multiplayer</string>
    <string name="logo_choice">App Logo</string>
    <string name="choice_text">Play Countdown</string>
    <string name="em_pw_field">Password...</string>
    <string name="e_btn_signin">Sign In</string>
    <string name="email_info">Email Sign in</string>
    <string name="email_field">Email...</string>
    <string name="app_logo_description">App logo image</string>
    <string name="btn_create_account">Sign up</string>
    <string name="playerOne">Player image</string>
    <string name="playerTwo">Player image</string>
    <string name="playerThree">Player image</string>
    <string name="playerFour">Player image</string>
    <string name="chat_info">Chat with your opponent.</string>
    <string name="chat_input">Enter text...</string>
    <string name="btn_chat_send">Send</string>
    <string name="texts_received">Texts received</string>
    <string name="signIn_info">Sign in</string>
    <string name="btn_signIn">Sign In</string>
    <string name="signIn_passw_field">Password...</string>
    <string name="signIn_email_field">Email...</string>
    <string name="signIn_txt">Join now.</string>
    <string name="no1">""</string>
    <string name="no2">""</string>
    <string name="no3">""</string>
    <string name="no4">""</string>
    <string name="no5">""</string>
    <string name="no6">""</string>
    <string name="plusButton">+</string>
    <string name="minusButton">-</string>
    <string name="multButton">*</string>
    <string name="divButton">÷</string>
    <string name="targetField">""</string>
    <string name="movedNum1">""</string>
    <string name="movedNum2">""</string>
    <string name="movedNum3">""</string>
    <string name="movedNum4">""</string>
    <string name="movedNum5">""</string>
    <string name="movedNum6">""</string>
    <string name="movedNum7">""</string>
    <string name="movedNum8">""</string>
    <string name="movedNum9">""</string>
    <string name="movedNum10">""</string>
    <string name="movedOperator1">""</string>
    <string name="movedOperator2">""</string>
    <string name="movedOperator3">""</string>
    <string name="movedOperator4">""</string>
    <string name="movedOperator5">""</string>
    <string name="subAnswerVar1">""</string>
    <string name="subAnswerVar2">""</string>
    <string name="subAnswerVar3">""</string>
    <string name="subAnswerVar4">""</string>
    <string name="clearAllTiles">Clear All</string>
    <string name="clearTile">Clear</string>
    <string name="targetField2">""</string>
    <string name="letterTargetField">""</string>
    <string name="lt1">""</string>
    <string name="lt2">""</string>
    <string name="lt3">""</string>
    <string name="lt4">""</string>
    <string name="lt5">""</string>
    <string name="lt6">""</string>
    <string name="lt7">""</string>
    <string name="lt8">""</string>
    <string name="lt9">""</string>
    <string name="movedLt1">""</string>
    <string name="movedLt2">""</string>
    <string name="movedLt3">""</string>
    <string name="movedLt4">""</string>
    <string name="movedLt5">""</string>
    <string name="movedLt6">""</string>
    <string name="movedLt7">""</string>
    <string name="movedLt8">""</string>
    <string name="movedLt9">""</string>
    <string name="vowelButton">vowel</string>
    <string name="consonantButton">consonant</string>
    <string name="solveLts">solve</string>
    <string name="clearAllLtButton">clear all</string>
    <string name="clearLtTile">clear</string>
    <string name="yourScoreText">Answer:</string>
    <string name="solve">Solver Answer</string>
    <string name="playerAnswer">""</string>
    <string name="answerText">""</string>
    <string name="scoreText1">"Score:"</string>
    <string name="scoreText2">""</string>
    <string name="singlePlayerMenuTiltle">Train Your Skills</string>
    <string name="lettersRdButton">letters round</string>
    <string name="numbersRdButton">numbers round</string>
    <string name="conundrumRdButton">conundrum round</string>
    <string name="normalGameButton">normal game</string>
    <string name="largeNumberButton">large number</string>
    <string name="smallNumberButton">small number</string>
    <string name="targetNo">000</string>
    <string name="solveButton">solve</string>
    <string name="numberTimer">30</string>
    <string name="letterTimer">30</string>
    <string name="ltSolutionText">Your Answer:</string>
    <string name="ltPlayerSolution">""</string>
    <string name="ltScoreText">Your Score:</string>
    <string name="ltPlayerScore">""</string>
    <string name="opponentltSolutionText">Opponent Solution:</string>
    <string name="opponentltScoreText">Opponent Score:</string>
    <string name="ltOpponentSolution">""</string>
    <string name="ltOpponentScore">""</string>
    <string name="ltSolverButton">Solver Answer</string>
    <string name="ltSolverAnswer">""</string>
    <string name="nextRound1">"Next Round"</string>
    <string name="column1">"You"</string>
    <string name="column2">"Opponent"</string>
    <string name="opponentAnswer">""</string>
    <string name="scoreText3">""</string>
    <string name="nextRound2">Next Round</string>
    <string name="roundColumn">Players</string>
    <string name="roundColumn1">Letters</string>
    <string name="roundColumn2">Numbers</string>
    <string name="roundColumn3">Conundrum</string>
    <string name="totalColumn">Total</string>
    <string name="user1column">You</string>
    <string name="user2column">Opponent</string>
    <string name="user2score1">""</string>
    <string name="user2score2">""</string>
    <string name="user1Score1">""</string>
    <string name="user1Score2">""</string>
    <string name="user1Score3">""</string>
    <string name="user1ScoreTotal">""</string>
    <string name="user2score3">""</string>
    <string name="user2scoreTotal">""</string>
    <string name="returnMenu">"Menu"</string>


</resources>
