<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#47D1D4"
    tools:context=".ScoreboardActivity">


    <TextView
        android:id="@+id/roundColumn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/roundColumn"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline43" />

    <TextView
        android:id="@+id/user1column"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/user1column"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintStart_toStartOf="@+id/guideline41"
        app:layout_constraintTop_toTopOf="@+id/guideline43" />

    <TextView
        android:id="@+id/user2column"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/user2column"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user1column"
        app:layout_constraintTop_toTopOf="@+id/guideline43" />

    <TextView
        android:id="@+id/RoundColumn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/roundColumn1"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline45"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundColumn" />

    <TextView
        android:id="@+id/user1Score1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/user1Score1"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline45"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintStart_toStartOf="@+id/guideline41"
        app:layout_constraintTop_toTopOf="@+id/guideline44" />

    <TextView
        android:id="@+id/user2Score1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/user2score1"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toBottomOf="@+id/user2column" />

    <TextView
        android:id="@+id/roundColumn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/roundColumn2"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline46"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RoundColumn1" />

    <TextView
        android:id="@+id/user1Score2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/user1Score2"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline46"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintStart_toEndOf="@+id/roundColumn2"
        app:layout_constraintTop_toBottomOf="@+id/user1Score1" />


    <TextView
        android:id="@+id/user2Score2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/user2score2"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline46"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toBottomOf="@+id/user2Score1" />


    <TextView
        android:id="@+id/roundColumn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/roundColumn3"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline47"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundColumn2" />

    <TextView
        android:id="@+id/user1Score3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/user1Score3"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline47"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintStart_toEndOf="@+id/roundColumn3"
        app:layout_constraintTop_toBottomOf="@+id/user1Score2" />

    <TextView
        android:id="@+id/user2Score3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/user2score3"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline47"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toTopOf="@+id/guideline46" />

    <TextView
        android:id="@+id/totalColumn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/totalColumn"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline48"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundColumn3" />

    <TextView
        android:id="@+id/user1ScoreTotal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/user1ScoreTotal"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline48"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintStart_toEndOf="@+id/totalColumn"
        app:layout_constraintTop_toTopOf="@+id/guideline47" />

    <TextView
        android:id="@+id/user2ScoreTotal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/user2scoreTotal"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toBottomOf="@+id/user2Score3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <Button
        android:id="@+id/returnMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/returnMenu"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline69"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintStart_toStartOf="@+id/guideline41"
        app:layout_constraintTop_toBottomOf="@+id/user1ScoreTotal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>