<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#47D1D4"
    tools:context=".NumbersRdActivity2">

    <Button
        android:id="@+id/solve"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/solve"
        app:layout_constraintBottom_toTopOf="@+id/guideline53"
        app:layout_constraintEnd_toStartOf="@+id/guideline56"
        app:layout_constraintStart_toStartOf="@+id/guideline96"
        app:layout_constraintTop_toTopOf="@+id/guideline52"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/answerText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/answerText"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline53" />

    <TextView
        android:id="@+id/playerAnswer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#f2f542"
        android:gravity="center"
        android:text="@string/playerAnswer"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline51"
        app:layout_constraintEnd_toStartOf="@+id/guideline55"
        app:layout_constraintStart_toEndOf="@+id/yourScoreText"
        app:layout_constraintTop_toTopOf="@+id/guideline50" />

    <TextView
        android:id="@+id/yourScoreText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/yourScoreText"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline79"
        app:layout_constraintEnd_toStartOf="@+id/guideline54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <TextView
        android:id="@+id/scoreText1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/scoreText1"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline52"
        app:layout_constraintEnd_toStartOf="@+id/guideline54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline51" />

    <TextView
        android:id="@+id/scoreText2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#f2f542"
        android:gravity="center"
        android:text="@string/scoreText2"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/solve"
        app:layout_constraintEnd_toStartOf="@+id/guideline55"
        app:layout_constraintStart_toStartOf="@+id/guideline54"
        app:layout_constraintTop_toTopOf="@+id/guideline51" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline96"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.165" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.825" />

    <TextView
        android:id="@+id/scoreText3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#f2f542"
        android:text="@string/scoreText3"
        app:layout_constraintBottom_toTopOf="@+id/guideline52"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline51" />

    <TextView
        android:id="@+id/opponentAnswer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#f2f542"
        android:text="@string/opponentAnswer"
        app:layout_constraintBottom_toTopOf="@+id/guideline51"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playerAnswer"
        app:layout_constraintTop_toTopOf="@+id/guideline50" />

    <TextView
        android:id="@+id/column1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|center_horizontal"
        android:text="@string/column1"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/playerAnswer"
        app:layout_constraintEnd_toStartOf="@+id/guideline55"
        app:layout_constraintStart_toStartOf="@+id/guideline54"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/column2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|center_horizontal"
        android:text="@string/column2"
        android:textColor="#0E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextRound2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nextRound2"
        app:layout_constraintBottom_toTopOf="@+id/guideline53"
        app:layout_constraintEnd_toStartOf="@+id/guideline98"
        app:layout_constraintStart_toEndOf="@+id/solve"
        app:layout_constraintTop_toTopOf="@+id/guideline52" />
</androidx.constraintlayout.widget.ConstraintLayout>